# cover_letter_utility

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: customize_letter.ipynb  example_apps.csv
homevenv/: pyvenv.cfg
src/: customize_letter.ipynb  dicts.xlsx  dicts_applied_dec31.csv  dicts_applied_nov15.csv  dicts_behavioral.csv  dicts_teaching.csv  dicts_teaching.xlsx  example_template.docx  utility.ipynb  utility.py
src/cover_letter_utility/: __init__.py  cli.py  core.py
tests/: test_core.py
